<resources>
    <string name="app_name">玩Android</string>
    <string name="shouye">首页</string>
    <string name="wenda">问答</string>
    <string name="tixi">体系</string>
    <string name="wode">我的</string>
    <string name="qudenglu">去登陆</string>
    <string name="quzhuce">去注册</string>
    <string name="wodejifen">我的积分</string>
    <string name="wodefenxiang">我的分享</string>
    <string name="wodeshoucang">我的收藏</string>
    <string name="yuedulishi">阅读历史</string>
    <string name="shaohouyuedu">稍后阅读</string>
    <string name="kaiyuanxiangmu">开源项目</string>
    <string name="guanyuzuozhe">关于作者</string>
    <string name="xitongshezhi">系统设置</string>
    <string name="qingshuruyonghuming">请输入用户名</string>
    <string name="qingshurumima">请输入密码</string>
    <string name="qingshuruyouxiang">请输入邮箱</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="dengchu">登出</string>
    <string name="zanwugongnengxuqiu">暂无功能需求</string>
</resources>